import "ResponseAuthenticationToken.proto";

option java_outer_classname="AuthenticationResponseProtocol";
package Alachisoft.NosDB.Common.Protobuf;
option java_package = "com.alachisoft.nosdb.common.protobuf";

message AuthenticationResponse
{
	optional ResponseAuthenticationToken authenticationToken = 1;
}